# QCO-Studio

./: .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  vcpkg.json
.github/workflows/: ci.yml
docs/: dependency-review.md  license-register.md  roadmap.md  technical-design.md
src/app/: Logging.cpp  Logging.h  main.cpp
src/core/: Document.cpp  Document.h  UndoStack.cpp  UndoStack.h
src/image/: ColorTransform.cpp  ColorTransform.h  ImageCodec.cpp  ImageCodec.h  MetadataProvider.cpp  MetadataProvider.h  RawImageProvider.cpp  RawImageProvider.h
src/render/: DocumentRenderer.cpp  DocumentRenderer.h  TileScheduler.cpp  TileScheduler.h
src/ui/: CanvasView.cpp  CanvasView.h  ImageExport.cpp  ImageExport.h  MainWindow.cpp  MainWindow.h  ProjectArchive.cpp  ProjectArchive.h
tests/: canvas_smoke_tests.cpp  color_transform_tests.cpp  core_tests.cpp  document_renderer_tests.cpp  image_codec_tests.cpp  image_export_tests.cpp  main_window_smoke_tests.cpp  metadata_provider_tests.cpp  project_archive_tests.cpp  raw_image_provider_tests.cpp
